@@ -5,7 +5,7 @@ CROSS_COMPILE=/usr/arm-linux/gcc-3.4.1-glibc-2.3.3/bin/arm-linux-
 
 VERSION = 1
 PATCHLEVEL = 0
-#SUBLEVEL = 0
+SUBLEVEL = 1
 #EXTRAVERSION = -rc3
 #NAME=Zonked Quokka
 
