@@ -51,11 +51,11 @@
 
 */
 
+#include <apex.h>
+#include <config.h>
 #include <driver.h>
 #include <service.h>
 #include <linux/string.h>
-#include <apex.h>
-#include <config.h>
 #include "hardware.h"
 #include <spinner.h>
 
