@@ -30,14 +30,16 @@ CONFIG_CMD_SETENV=y
 #CONFIG_CMD_VERIFY=y
 #CONFIG_CMD_WAIT=y
 #CONFIG_CMD_XRECEIVE=y
+CONFIG_CMD_EMAC=y
 
 CONFIG_ATAG=y
 CONFIG_ATAG_PHYS=0x20000100
 CONFIG_ARCH_NUMBER=609
 
 #CONFIG_DRIVER_NAND=y
-CONFIG_DRIVER_NOR=y
+#CONFIG_DRIVER_NOR=y
 #CONFIG_RELOCATE_NAND=y
+CONFIG_DRIVER_EMAC=y
 
 CONFIG_NAND_LPD=y
 
